// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not show ellipsis when first page is just barely out of range 1`] = `
<styled.div>
  <Themed(styled.button)
    aria-label="First page"
    disabled={false}
    onClick={[Function]}
    title="First page"
    withIcon={true}
  >
    <ReactComponent />
  </Themed(styled.button)>
  <Themed(styled.button)
    aria-label="Previous page"
    disabled={false}
    onClick={[Function]}
    title="Previous page"
    withIcon={true}
  >
    <ReactComponent />
  </Themed(styled.button)>
  <Themed(styled.button)
    aria-label="First page"
    onClick={[Function]}
    title="First page"
  >
    1
  </Themed(styled.button)>
  <Themed(styled.button)
    active={false}
    aria-label="Page 2"
    key="2"
    onClick={[Function]}
    title="Page 2"
  >
    2
  </Themed(styled.button)>
  <Themed(styled.button)
    active={false}
    aria-label="Page 3"
    key="3"
    onClick={[Function]}
    title="Page 3"
  >
    3
  </Themed(styled.button)>
  <Themed(styled.button)
    active={true}
    aria-label="Page 4"
    key="4"
    onClick={[Function]}
    title="Page 4"
  >
    4
  </Themed(styled.button)>
  <Themed(styled.button)
    active={false}
    aria-label="Page 5"
    key="5"
    onClick={[Function]}
    title="Page 5"
  >
    5
  </Themed(styled.button)>
  <Themed(styled.button)
    active={false}
    aria-label="Page 6"
    key="6"
    onClick={[Function]}
    title="Page 6"
  >
    6
  </Themed(styled.button)>
  <styled.div>
    …
  </styled.div>
  <Themed(styled.button)
    aria-label="Page 10"
    onClick={[Function]}
    title="Page 10"
  >
    10
  </Themed(styled.button)>
  <Themed(styled.button)
    aria-label="Next page"
    disabled={false}
    onClick={[Function]}
    title="Next page"
    withIcon={true}
  >
    <ReactComponent />
  </Themed(styled.button)>
  <Themed(styled.button)
    aria-label="Last page"
    disabled={false}
    onClick={[Function]}
    title="Last page"
    withIcon={true}
  >
    <ReactComponent />
  </Themed(styled.button)>
</styled.div>
`;

exports[`should show ellipsis on both sides in the middle 1`] = `
<styled.div>
  <Themed(styled.button)
    aria-label="First page"
    disabled={false}
    onClick={[Function]}
    title="First page"
    withIcon={true}
  >
    <ReactComponent />
  </Themed(styled.button)>
  <Themed(styled.button)
    aria-label="Previous page"
    disabled={false}
    onClick={[Function]}
    title="Previous page"
    withIcon={true}
  >
    <ReactComponent />
  </Themed(styled.button)>
  <Themed(styled.button)
    aria-label="First page"
    onClick={[Function]}
    title="First page"
  >
    1
  </Themed(styled.button)>
  <styled.div>
    …
  </styled.div>
  <Themed(styled.button)
    active={false}
    aria-label="Page 9"
    key="9"
    onClick={[Function]}
    title="Page 9"
  >
    9
  </Themed(styled.button)>
  <Themed(styled.button)
    active={false}
    aria-label="Page 10"
    key="10"
    onClick={[Function]}
    title="Page 10"
  >
    10
  </Themed(styled.button)>
  <Themed(styled.button)
    active={true}
    aria-label="Page 11"
    key="11"
    onClick={[Function]}
    title="Page 11"
  >
    11
  </Themed(styled.button)>
  <Themed(styled.button)
    active={false}
    aria-label="Page 12"
    key="12"
    onClick={[Function]}
    title="Page 12"
  >
    12
  </Themed(styled.button)>
  <Themed(styled.button)
    active={false}
    aria-label="Page 13"
    key="13"
    onClick={[Function]}
    title="Page 13"
  >
    13
  </Themed(styled.button)>
  <styled.div>
    …
  </styled.div>
  <Themed(styled.button)
    aria-label="Page 20"
    onClick={[Function]}
    title="Page 20"
  >
    20
  </Themed(styled.button)>
  <Themed(styled.button)
    aria-label="Next page"
    disabled={false}
    onClick={[Function]}
    title="Next page"
    withIcon={true}
  >
    <ReactComponent />
  </Themed(styled.button)>
  <Themed(styled.button)
    aria-label="Last page"
    disabled={false}
    onClick={[Function]}
    title="Last page"
    withIcon={true}
  >
    <ReactComponent />
  </Themed(styled.button)>
</styled.div>
`;

exports[`should show the first five pages when on first page 1`] = `
<styled.div>
  <Themed(styled.button)
    aria-label="First page"
    disabled={true}
    onClick={[Function]}
    title="First page"
    withIcon={true}
  >
    <ReactComponent />
  </Themed(styled.button)>
  <Themed(styled.button)
    aria-label="Previous page"
    disabled={true}
    onClick={[Function]}
    title="Previous page"
    withIcon={true}
  >
    <ReactComponent />
  </Themed(styled.button)>
  <Themed(styled.button)
    active={true}
    aria-label="Page 1"
    key="1"
    onClick={[Function]}
    title="Page 1"
  >
    1
  </Themed(styled.button)>
  <Themed(styled.button)
    active={false}
    aria-label="Page 2"
    key="2"
    onClick={[Function]}
    title="Page 2"
  >
    2
  </Themed(styled.button)>
  <Themed(styled.button)
    active={false}
    aria-label="Page 3"
    key="3"
    onClick={[Function]}
    title="Page 3"
  >
    3
  </Themed(styled.button)>
  <Themed(styled.button)
    active={false}
    aria-label="Page 4"
    key="4"
    onClick={[Function]}
    title="Page 4"
  >
    4
  </Themed(styled.button)>
  <Themed(styled.button)
    active={false}
    aria-label="Page 5"
    key="5"
    onClick={[Function]}
    title="Page 5"
  >
    5
  </Themed(styled.button)>
  <styled.div>
    …
  </styled.div>
  <Themed(styled.button)
    aria-label="Page 15"
    onClick={[Function]}
    title="Page 15"
  >
    15
  </Themed(styled.button)>
  <Themed(styled.button)
    aria-label="Next page"
    disabled={false}
    onClick={[Function]}
    title="Next page"
    withIcon={true}
  >
    <ReactComponent />
  </Themed(styled.button)>
  <Themed(styled.button)
    aria-label="Last page"
    disabled={false}
    onClick={[Function]}
    title="Last page"
    withIcon={true}
  >
    <ReactComponent />
  </Themed(styled.button)>
</styled.div>
`;

exports[`should show the last five pages when on last page 1`] = `
<styled.div>
  <Themed(styled.button)
    aria-label="First page"
    disabled={false}
    onClick={[Function]}
    title="First page"
    withIcon={true}
  >
    <ReactComponent />
  </Themed(styled.button)>
  <Themed(styled.button)
    aria-label="Previous page"
    disabled={false}
    onClick={[Function]}
    title="Previous page"
    withIcon={true}
  >
    <ReactComponent />
  </Themed(styled.button)>
  <Themed(styled.button)
    aria-label="First page"
    onClick={[Function]}
    title="First page"
  >
    1
  </Themed(styled.button)>
  <styled.div>
    …
  </styled.div>
  <Themed(styled.button)
    active={false}
    aria-label="Page 7"
    key="7"
    onClick={[Function]}
    title="Page 7"
  >
    7
  </Themed(styled.button)>
  <Themed(styled.button)
    active={false}
    aria-label="Page 8"
    key="8"
    onClick={[Function]}
    title="Page 8"
  >
    8
  </Themed(styled.button)>
  <Themed(styled.button)
    active={false}
    aria-label="Page 9"
    key="9"
    onClick={[Function]}
    title="Page 9"
  >
    9
  </Themed(styled.button)>
  <Themed(styled.button)
    active={true}
    aria-label="Page 10"
    key="10"
    onClick={[Function]}
    title="Page 10"
  >
    10
  </Themed(styled.button)>
  <Themed(styled.button)
    active={false}
    aria-label="Page 11"
    key="11"
    onClick={[Function]}
    title="Page 11"
  >
    11
  </Themed(styled.button)>
  <Themed(styled.button)
    aria-label="Next page"
    disabled={false}
    onClick={[Function]}
    title="Next page"
    withIcon={true}
  >
    <ReactComponent />
  </Themed(styled.button)>
  <Themed(styled.button)
    aria-label="Last page"
    disabled={false}
    onClick={[Function]}
    title="Last page"
    withIcon={true}
  >
    <ReactComponent />
  </Themed(styled.button)>
</styled.div>
`;
